--- a/taskmanager/templates/base.html
+++ b/taskmanager/templates/base.html
@@ -42,7 +42,7 @@
         <div class="footer-copyright">
           <div class="container">
           For educational purposes only
-          <a class="grey-text text-lighten-4 right" href="https://codeinstitute.net" target="_blank">&copy; Code Institute</a>
+          <a class="white-text right" href="https://codeinstitute.net" target="_blank">&copy; Code Institute</a>
           </div>
         </div>
       </footer>
